[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/weapons/_base/_BaseWeapon.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/sfx_Weap_IntroWeapon.wav" type="AudioStream" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.482143, 1 )
colors = PoolColorArray( 1, 0.84375, 0, 1, 0.652832, 0.652832, 0.652832, 0.580357, 0.678431, 0.678431, 0.678431, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
lifetime_randomness = 0.9
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.9
angular_velocity = 500.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 15.0
scale_random = 0.5
color_ramp = SubResource( 2 )

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]

[node name="MuzzleParticles" type="Particles2D" parent="Muzzle"]
emitting = false
amount = 25
lifetime = 0.3
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="SlotIcon" type="Sprite" parent="."]
visible = false

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true

[node name="DissipationCooldown" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ShootingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="WeaponTween" type="Tween" parent="."]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="DissipationCooldown" to="." method="_on_DissipationCooldown_timeout"]
[connection signal="tween_all_completed" from="WeaponTween" to="." method="_on_WeaponTween_tween_all_completed"]
